@@ -1,7 +1,7 @@
 package de.qabel.core.drop;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URISyntaxException;
+import java.net.URI;
 
 import org.junit.Rule;
 import org.junit.Test;
@@ -12,34 +12,34 @@ import de.qabel.core.exceptions.QblDropInvalidURL;
 
 public class DropURLTest {
     @Test
-    public void validURLTest() throws MalformedURLException, QblDropInvalidURL {
+    public void validURLTest() throws URISyntaxException, QblDropInvalidURL  {
     	new DropURL("http://www.foo.org/1234567890123456789012345678901234567890123");
     }
 
     @Rule public ExpectedException exception = ExpectedException.none();
 
     @Test
-    public void tooShortURLTest() throws MalformedURLException, QblDropInvalidURL {
+    public void tooShortURLTest() throws URISyntaxException, QblDropInvalidURL {
     	exception.expect(QblDropInvalidURL.class);
     	new DropURL("http://www.bar.org/not43base64chars");
     }
 
     @Test
-    public void tooLongURLTest() throws QblDropInvalidURL, MalformedURLException {
+    public void tooLongURLTest() throws QblDropInvalidURL, URISyntaxException {
     	exception.expect(QblDropInvalidURL.class);
     	new DropURL("http://www.foo.org/01234567890123456789012345678901234567890123");
     }
 
     @Test
-    public void nonBase64URLTest() throws MalformedURLException, QblDropInvalidURL {
+    public void nonBase64URLTest() throws URISyntaxException, QblDropInvalidURL {
     	exception.expect(QblDropInvalidURL.class);
     	new DropURL("http://www.baz.org/2@34567890123456789012345678901234567890123");
     }
     
     @Test
-    public void testGeneration() throws MalformedURLException, QblDropInvalidURL {
+    public void testGeneration() throws URISyntaxException, QblDropInvalidURL {
     	DropServer server = new DropServer();
-    	server.setUrl(new URL("http://example.com"));
+        server.setUri(new URI("http://example.com"));
     	DropURL drop = new DropURL(server);
     	new DropURL(drop.toString());
     }
